[project]
name = "anomaly-log-detector"
version = "0.1.0"
description = "Anomaly Log Detection Framework with DeepLog, MS-CRED, and statistical baseline methods"
authors = [{ name = "Kaeul Kim" }]
requires-python = ">=3.11"
readme = "prd.md"
license = "MIT"
dependencies = [
    "click>=8.2.1",
    "drain3>=0.9.11",
    "orjson>=3.11.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "regex>=2025.9.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
]

[project.scripts]
alog-detect = "anomaly_log_detector.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anomaly_log_detector*"]
exclude = ["data*", "config*", ".*", "tests*"]

 
